--- a/Javascript opdrachten/index.html
+++ b/Javascript opdrachten/index.html
@@ -6,8 +6,6 @@
 </head>
 <body>
 	<h1> My first Javascript Playground </h1>
-
-	<script src="javascript.js">
-	</script>
+	<script type="text/javascript" src="javascript.js"></script>
 </body>
 </html>
